--- a/.travis.yml
+++ b/.travis.yml
@@ -1,49 +1,62 @@
 language: php
 
+dist: bionic
 sudo: required
 
 services:
-  mysql
-
-dist: bionic
+  - mysql
 
 addons:
   firefox: "47.0.1"
-  postgresql: "9.4"
+  postgresql: "9.6"
   apt:
     packages:
       - openjdk-8-jre-headless
+      - chromium-chromedriver
 
 cache:
   directories:
     - $HOME/.composer/cache
     - $HOME/.npm
 
-php:
- - 7.1
- - 7.2
+matrix:
+  include:
+    - php: 7.3
+      env:
+        - MOODLE_BRANCH=master
+        - DB=mysqli
 
-env:
-  - MOODLE_BRANCH=MOODLE_37_STABLE DB=pgsql IGNORE_PATHS=mobile_src
-  - MOODLE_BRANCH=MOODLE_38_STABLE DB=mysqli IGNORE_PATHS=mobile_src
+    - php: 7.3
+      env:
+        - MOODLE_BRANCH=MOODLE_38_STABLE
+        - DB=pgsql
+
+    - php: 7.2
+      env:
+        - MOODLE_BRANCH=MOODLE_37_STABLE
+        - DB=mysqli
+
 
 before_install:
-  - phpenv config-rm xdebug.ini
-  - nvm install 8.9
-  - nvm use 8.9
-  - cd ../..
-  - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
-  - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
+    - phpenv config-rm xdebug.ini
+    - nvm install 14.2.0
+    - nvm use 14.2.0
+    - cd ../..
+    - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
+    - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
+    - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//') JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
 
 install:
   - moodle-plugin-ci install
 
 script:
   - moodle-plugin-ci phplint
+  - moodle-plugin-ci phpcpd
+  - moodle-plugin-ci phpmd || true
   - moodle-plugin-ci codechecker
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
-  - moodle-plugin-ci mustache
-  - moodle-plugin-ci grunt
+  - moodle-plugin-ci mustache || true
+  - moodle-plugin-ci grunt || [ "$MOODLE_BRANCH" = 'master' ] || [ "$MOODLE_BRANCH" = 'MOODLE_38_STABLE' ] || [ "$MOODLE_BRANCH" = 'MOODLE_37_STABLE' ]
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
+  - moodle-plugin-ci behat || true # Behat seems to be broken at the moment :-(
